--- a/Marketplace-Client/Marketplace-Client/cart.ui
+++ b/Marketplace-Client/Marketplace-Client/cart.ui
@@ -88,13 +88,13 @@ background-color: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:2, fx:0.500
     </layout>
    </widget>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>711</x>
-     <y>410</y>
-     <width>121</width>
-     <height>161</height>
+     <y>420</y>
+     <width>141</width>
+     <height>151</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
