--- a/Marketplace-Client/Marketplace-Client/account.ui
+++ b/Marketplace-Client/Marketplace-Client/account.ui
@@ -207,7 +207,7 @@ background-color: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:2, fx:0.500
        <string notr="true">background-color: rgb(255, 255, 255);</string>
       </property>
       <property name="text">
-       <string>Save</string>
+       <string>Update</string>
       </property>
      </widget>
     </item>
@@ -243,7 +243,7 @@ background-color: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:2, fx:0.500
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>640</x>
